--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Brains first - then hard work</h2>
+                        <h2 class="text-white mt-0">Established in 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Established in 2002, we use traditional qualitative and quantitative research techniques combined with modern data science packages such as Seaborn, Pandas and Folium.</p>
+                        <p class="text-white-50 mb-4">We use traditional qualitative and quantitative research techniques combined with modern Python data science packages such as Seaborn, Numpy, Pandas and Folium.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
