--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
 	<meta name="google-site-verification" content="21DWhBEGrSFMi4LgB9kRE1qEj0Alp2ixbyD77CY59bU" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content=""Expert fast remote research and insight backed by the latest data science"/>
         <meta name="author" content="" />
         <title>Get Heard: Research Data Insight Est 2002</title>
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
