--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Established in 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">We use traditional qualitative and quantitative research techniques combined with modern Python data science packages such as Seaborn, Numpy, Pandas and Folium.</p>
+                        <p class="text-white-50 mb-4">We use traditional qualitative and quantitative research techniques combined with modern Python data science and visualisation tools such as Seaborn, Pandas and Xgboost.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
@@ -232,10 +232,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Sefton Older People’s Strategy</h2>
+                                    <h2 class="text-uppercase">Age-Friendly Strategy</h2>
                                     <p class="item-intro text-muted">An Age-Friendly Strategy using guidelines from the World Health Organisation</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                    <p>We developed a pioneering strategy to support older people in Sefton in line with international best practice. The strategy may be downloaded from the WHO website using the Sample Report link.</p>
+                                    <p>We developed a pioneering strategy to support older people in Sefton, England in line with international best practice. The strategy may be downloaded from the WHO website using the Sample Report link.</p>
                                     <ul class="list-inline">
                                         <li>Date: 2019-2024</li>
                                         <li>Client: Sefton Partnership for Older People</li>
@@ -370,9 +370,9 @@
                                     <h2 class="text-uppercase">Data Analysis</h2>
                                     <p class="item-intro text-muted">New York 311 housing calls.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
-                                    <p>As the final step in obtaining a Data Science qualification we carried out a capstone project to analyse 6 <i>million</i> housing calls to the New York authorities and identify trends across the five boroughs. The Bronx topped the charts with the most housing complaints, with Staten Island having the fewest. Who knew!</p>
+                                    <p>We carried out a capstone project to analyse 6 million housing calls to the New York authorities and identify trends across the five boroughs. The Bronx topped the charts with the most housing complaints, with Staten Island having the fewest.</p>
                                     <ul class="list-inline">
-                                        <li>Date: April 2020</li>
+                                        <li>Date: April 2022</li>
                                         <li>Qualification: IBM Professional Certificate in Python Data Science</li>
                                         <li>Category: Data Science</li>
                                     </ul>
