--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Established in 2002</h2>
+                        <h2 class="text-white mt-0">Established 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">We use traditional qualitative and quantitative research techniques combined with modern Python data science and visualisation tools such as Seaborn, Pandas and Xgboost.</p>
+                        <p class="text-white-50 mb-4">We use traditional qualitative and quantitative research techniques combined with modern Python data analysis and visualisation tools such as Jupyter Notebooks, Seaborn and Pandas.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Data Analysis</h3>
-                            <p class="text-muted mb-0">Start with what you've got and move from there. Your existing data is full of untapped insights.</p>
+                            <p class="text-muted mb-0">Start with what you've got and move from there. Your existing data may have untapped insights.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -169,7 +169,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Young Carers</h3></div>
+                                <h3 class="h4 mb-2">Feasibility Study</h3></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
@@ -340,14 +340,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Young Carers</h2>
-                                    <p class="item-intro text-muted">Interim Review of Family Focus Project</p>
+                                    <h2 class="text-uppercase">Feasibility Study</h2>
+                                    <p class="item-intro text-muted">Community Project</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>Many young people have caring responsibilities at an age when they most need care themselves. Family Focus is a valuable project aimed at young carers (aged 5+) with one or more parents who has a mental health problem or misuses substances. For this interim review we used interviews, focus groups and case studies to assess whether the project was meeting the desired outcomes.</p>
+                                    <p>For this project we worked with a hospice near Liverpool to carry out market research for a new development to link existing buildings and create a community cafe.</p>
                                     <ul class="list-inline">
-                                        <li>Date: 2019</li>
-                                        <li>Client: Blackpool Carers Centre Ltd</li>
-                                        <li>Category: Interim Review</li>
+                                        <li>Date: April 2022</li>
+                                        <li>Client: St Joseph's Hospice</li>
+                                        <li>Category: Feasibility Study</li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
                                 </div>
