--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Established 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">We use traditional qualitative and quantitative research techniques combined with modern Python data analysis and visualisation tools such as Jupyter Notebooks, Seaborn and Pandas.</p>
+                        <p class="text-white-50 mb-4">We use traditional research techniques such as surveys, focus groups and interviews combined with modern data analysis and visualisation tools such as Jupyter Notebooks.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Company No. 10018091.<br>Registered Office 21a Hoghton Street Southport England</div></div>
+            <div class="container"><div class="small text-center text-muted">Company No. 10018091.<br>Registered Office 21a Hoghton Street PR9 0QX England</div></div>
         </footer>
 
  <!-- Portfolio Modals--><!-- Modal 1-->
