--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Established 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">We use traditional research techniques such as surveys, focus groups and interviews combined with modern data analysis and visualisation tools such as Jupyter Notebooks.</p>
+                        <p class="text-white-50 mb-4">We use traditional research techniques combined with modern data analysis and visualisation tools such as Jupyter Notebooks.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
@@ -69,30 +69,31 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-question-circle text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Research</h3>
-                            <p class="text-muted mb-0">All aspects of customer research such as focus groups, interviews and surveys </p>
+                            <i class='fas fa-4x fa-robot text-primary mb-4'></i>
+                            <h3 class="h4 mb-2">Machine Learning</h3>
+                            <p class="text-muted mb-0">Use features in your data to make predictions about sales, shares, health - you name it!
+</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Data Analysis</h3>
-                            <p class="text-muted mb-0">Start with what you've got and move from there. Your existing data may have untapped insights.</p>
+                            <h3 class="h4 mb-2">Data Analysis/Dataviz</h3>
+                            <p class="text-muted mb-0">Start with what you've got and move from there. Tap existing data for new insights.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Strategy</h3>
-                            <p class="text-muted mb-0">Clear straightforward plans developing your goals and values and based on sound evidence. </p>
+                            <h3 class="h4 mb-2">Strategic Planning</h3>
+                            <p class="text-muted mb-0">Clear plans developing your goals and values and based on sound evidence. </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-sun text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Evaluation</h3>
-                            <p class="text-muted mb-0">Stuck for ideas? Get to the heart of the matter with a fresh perspective.</p>
+                             <i class="fas fa-4x fa-table text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Research</h3>
+                            <p class="text-muted mb-0">All aspects of UX research such as focus groups, interviews and surveys
                         </div>
                     </div>
                 </div>
@@ -212,7 +213,7 @@
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:gkitchen@getheard.co.uk">info@getheard.co.uk</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:gkitchen@getheard.io">info@getheard.io</a>
                     </div>
                 </div>
             </div>
