--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <hr class="divider my-4"/>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">With expertise in all forms of research and data analysis we can help you make sense of a complex world.</p>
+                        <p class="text-white-75 font-weight-medium mb-5">With expertise in all forms of research and data analysis we can help you make sense of a complex world.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Data Analysis/Dataviz</h3>
+                            <h3 class="h4 mb-2">Data Analysis</h3>
                             <p class="text-muted mb-0">Start with what you've got and move from there. Tap existing data for new insights.</p>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                              <i class="fas fa-4x fa-table text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Research</h3>
+                            <h3 class="h4 mb-2">Customer Research</h3>
                             <p class="text-muted mb-0">All aspects of UX research such as focus groups, interviews and surveys
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Age-Friendly Strategy</h3>
+                                <h3 class="h4 mb-2">Strategy for Seniors</h3>
                             </div>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Postal Survey</h3>
+                                <h3 class="h4 mb-2">Predicting Cancer</h3>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Evaluation</h3>
+                                <h3 class="h4 mb-2">Carers Strategic Framework</h3>
 			</div>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                                     <h2 class="text-uppercase">Age-Friendly Strategy</h2>
                                     <p class="item-intro text-muted">An Age-Friendly Strategy using guidelines from the World Health Organisation</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                    <p>We developed a pioneering strategy to support older people in Sefton, England in line with international best practice. The strategy may be downloaded from the WHO website using the Sample Report link.</p>
+                                    <p>A pioneering strategy to support older people in Sefton, England in line with international best practice. The strategy may be downloaded from the Wolrd Health Organization website.</p>
                                     <ul class="list-inline">
                                         <li>Date: 2019-2024</li>
                                         <li>Client: Sefton Partnership for Older People</li>
@@ -260,14 +260,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Survey</h2>
-                                    <p class="item-intro text-muted">Postal survey of unpaid carers in Halton</p>
+                                    <h2 class="text-uppercase">Machine Learning</h2>
+                                    <p class="item-intro text-muted">Modelling Breast Cancer Malignancy</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
-                                    <p>We carried out a postal survey of 1,000 carers in Halton with 266 responses. 62% of carers registered with Halton Carers Centre were providing care for more than 50 hours per week, profoundly affecting their own physical and mental health. Contact us for a free copy of the full report.</p>
+                                    <p>A machine learning model with 95% accuracy to classify likely breast cancer malignancy using a handful of cell nuclei features.</p>
                                     <ul class="list-inline">
-                                        <li>Date:December 2015</li>
-                                        <li>Client: Halton Carers Centre Ltd</li>
-                                        <li>Category: Survey</li>
+                                        <li>Date:August 2022</li>
+                                        <li>Source: https://github.com/get-heard/breastcancer</li>
+                                        <li>Category: Machine Learning</li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
                                 </div>
@@ -290,7 +290,7 @@
                                     <h2 class="text-uppercase">Asset Mapping</h2>
                                     <p class="item-intro text-muted">Mapping local charities to inform a Town Plan </p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
-                                    <p>We used Charity Commission data under the Open Government License to build a SQL database of nearly 200 local charities. From this we created a contact directory and a geographical representation of local charities according to income levels. This will be used to consult and engage with the voluntary sector locally on the Town Masterplan.<br><br>(Thumbnail map tile by Stamen Design under CC by 3.0. Data by OpenStreetMap under CC by SA).</p>
+                                    <p>We used Charity Commission data under the Open Government License to creat a contact directory and a geographical representation of local charities according to income levels. This will be used to consult and engage with the voluntary sector locally on the Town Masterplan.<br><br>(Thumbnail map tile by Stamen Design under CC by 3.0. Data by OpenStreetMap under CC by SA).</p>
                                     <ul class="list-inline">
                                         <li>Date: May 2020</li>
                                         <li>Client: Southport Town Deal</li>
@@ -314,14 +314,14 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Review</h2>
-                                    <p class="item-intro text-muted">Benefits assessment advocacy project </p>
+                                    <h2 class="text-uppercase">Carers on the Frontline in Cheshire & Merseyside</h2>
+                                    <p class="item-intro text-muted">A strategy to support unpaid carers</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
-                                    <p>We carried out a three-year evaluation of a project which supported people with health conditions to get their voices hear at benefits assessment hearings across Lancashire. The evaluation used focus groups and semi-structured interviews to obtain feedback from clients, staff and stakeholders. Following the evaluation the project received repeat funding from the National Lottery.</p>
+                                    <p>We worked with the NHS, the Integrated Care Sytem and local carer support organisations to create a Carers Strategy for this area, with a population of over 1.5 million.</p>
                                     <ul class="list-inline">
-                                        <li>Date: 2016-2019</li>
-                                        <li>Client: ICANN</li>
-                                        <li>Category:Evaluation</li>
+                                        <li>Date: September 2022</li>
+                                        <li>Client: NHS North West, Cheshire & Merseyside ICS, Voluntary Sector North West</li>
+                                        <li>Category:Strategic Plan</li>
                                     </ul>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
                                 </div>
@@ -344,7 +344,7 @@
                                     <h2 class="text-uppercase">Feasibility Study</h2>
                                     <p class="item-intro text-muted">Community Project</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>For this project we worked with a hospice near Liverpool to carry out market research for a new development to link existing buildings and create a community cafe.</p>
+                                    <p>Market research for a new development to link existing hospice buildings and create a community cafe, therapies suite and office accommodation.</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2022</li>
                                         <li>Client: St Joseph's Hospice</li>
@@ -368,10 +368,10 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Data Analysis</h2>
+                                    <h2 class="text-uppercase">New York State of Mind</h2>
                                     <p class="item-intro text-muted">New York 311 housing calls.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
-                                    <p>We carried out a capstone project to analyse 6 million housing calls to the New York authorities and identify trends across the five boroughs. The Bronx topped the charts with the most housing complaints, with Staten Island having the fewest.</p>
+                                    <p>A capstone project to analyse 6 million housing calls to the New York authorities and identify trends across the five boroughs. The Bronx topped the charts with the most housing complaints, with Staten Island having the fewest.</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2022</li>
                                         <li>Qualification: IBM Professional Certificate in Python Data Science</li>
