--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Carers on the Frontline in Cheshire & Merseyside</h2>
-                                    <p class="item-intro text-muted">A strategy to support unpaid carers</p>
+                                    <h2 class="text-uppercase">Carers on the Frontline</h2>
+                                    <p class="item-intro text-muted">A strategy to support unpaid carers across Cheshire & Merseyside</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
                                     <p>We worked with the NHS, the Integrated Care Sytem and local carer support organisations to create a Carers Strategy for this area, with a population of over 1.5 million.</p>
                                     <ul class="list-inline">
