--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Carers Strategic Framework</h3>
+                                <h3 class="h4 mb-2">Carers Strategy</h3>
 			</div>
                         </div>
                     </div>
