--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                     <h2 class="text-uppercase">Age-Friendly Strategy</h2>
                                     <p class="item-intro text-muted">An Age-Friendly Strategy using guidelines from the World Health Organisation</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                    <p>A pioneering strategy to support older people in Sefton, England in line with international best practice. The strategy may be downloaded from the Wolrd Health Organization website.</p>
+                                    <p>A pioneering strategy to support older people in Sefton, England in line with international best practice. The strategy may be downloaded from the World Health Organization website.</p>
                                     <ul class="list-inline">
                                         <li>Date: 2019-2024</li>
                                         <li>Client: Sefton Partnership for Older People</li>
