--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+44 (0)1704 530 028</div>
+                        <div>+44 (0)7434 881 118</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:gkitchen@getheard.io">info@getheard.io</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:gkitchen@getheard.co.uk">info@getheard.co.uk</a>
                     </div>
                 </div>
             </div>
