--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:gkitchen@getheard.co.uk">info@getheard.co.uk</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:info@getheard.co.uk">info@getheard.co.uk</a>
                     </div>
                 </div>
             </div>
