--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Get in touch!</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible. Initial consultation is completely free of charge.</p>
+                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible. Initial consultation is free of charge.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -213,7 +213,7 @@
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:info@getheard.co.uk">info@getheard.co.uk</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:info@getheard.io">info@getheard.io</a>
                     </div>
                 </div>
             </div>
