--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            # <div class="container"><div class="small text-center text-muted">21a Hoghton Street PR9 0QX England</div></div>
+            <div class="container"><div class="small text-center text-muted">Inspired Simplicity</div></div>
         </footer>
  <!-- Portfolio Modals--><!-- Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
