--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Inspired Simplicity</div></div>
+            <div class="container"><div class="small text-center text-muted">getheard.io</div></div>
         </footer>
  <!-- Portfolio Modals--><!-- Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
