--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Inspired simplicity</h2>
+                        <h2 class="text-white mt-0">Established since 2002</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Traditional research techniques combined with modern data science tools such as Jupyter Notebooks.</p>
+                        <p class="text-white-50 mb-4">We use traditional research techniques combined with modern data science tools such as Jupyter Notebooks.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">getheard.io</div></div>
+            <div class="container"><div class="small text-center text-muted">Inspired Simplicity</div></div>
         </footer>
  <!-- Portfolio Modals--><!-- Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
