--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">getheard.io</span></a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/img/navbar-logo.svg" width=125 height = 71/></a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Established in 2002</h2>
+                        <h2 class="text-white mt-0">Established since 2002</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">We use traditional research techniques combined with modern data science tools such as Jupyter Notebooks.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
