--- a/index.html
+++ b/index.html
@@ -70,30 +70,30 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class='fas fa-4x fa-robot text-primary mb-4'></i>
-                            <h3 class="h4 mb-2">Machine Learning</h3>
-                            <p class="text-muted mb-0">Use features in your data to make predictions.
+                            <h3 class="h4 mb-2">Data Analysis</h3>
+                            <p class="text-muted mb-0">Analyse and visualise your data for new insights.
 </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Data Analysis</h3>
+                            <h3 class="h4 mb-2">Machine Learning</h3>
                             <p class="text-muted mb-0">Tap existing data for new insights.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Strategic Planning</h3>
-                            <p class="text-muted mb-0">Clear plans integrating goals with evidence.</p>
+                            <h3 class="h4 mb-2">Deep Learning</h3>
+                            <p class="text-muted mb-0">Unlock the power of artificial neural networks.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                              <i class="fas fa-4x fa-table text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Customer Research</h3>
-                            <p class="text-muted mb-0">All aspects of UX research such as surveys and focus groups.
+                            <h3 class="h4 mb-2">UX Research</h3>
+                            <p class="text-muted mb-0">Collect user views with a range of tools and methods.
                         </div>
                     </div>
                 </div>
