--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content=""Expert fast remote research and insight backed by the latest data science"/>
+        <meta name="description" content="Data Science Solutions"/>
         <meta name="author" content="" />
         <title>Data | Research | Insight</title>
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -42,7 +42,7 @@
                         <hr class="divider my-4"/>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-medium mb-5">With expertise in all forms of research and data analysis we can help you make sense of a complex world.</p>
+                        <p class="text-white-75 font-weight-medium mb-5">With expertise in all aspects of machine learning and data science we can help you make sense of a complex world.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class='fas fa-4x fa-robot text-primary mb-4'></i>
+                            <i class='fas fa-4x fa-laptop-code text-primary mb-4'></i>
                             <h3 class="h4 mb-2">Data Analysis</h3>
                             <p class="text-muted mb-0">Analyse and visualise your data for new insights.
 </p>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-robot text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Machine Learning</h3>
                             <p class="text-muted mb-0">Tap existing data for new insights.</p>
                         </div>
