--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Established 2002</h2>
+                        <h2 class="text-white mt-0">Inspired simplicity.</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">We use traditional research techniques combined with modern data science tools such as Jupyter Notebooks.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Find out more</a>
