--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-robot text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Machine Learning</h3>
-                            <p class="text-muted mb-0">Tap existing data for new insights.</p>
+                            <p class="text-muted mb-0">Use features in your data to create predictive models.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
