--- a/index.html
+++ b/index.html
@@ -111,78 +111,78 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1"
+                            <a class="portfolio-link" href="https://getheard.quarto.pub/tips/"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Strategy for Seniors</h3>
+                                <h3 class="h4 mb-2">Restaurant Dashboard</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2"
+                            <a class="portfolio-link" href="https://hearts.streamlit.app/"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Predicting Cancer</h3>
+                                <h3 class="h4 mb-2">Predicting Heart Disease</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3"
+                            <a class="portfolio-link" href="https://diamondz.streamlit.app/"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                               	<h3 class="h4 mb-2">Asset Mapping</h3>
+                               	<h3 class="h4 mb-2">Diamond Price Model</h3>
 			</div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4"
+                            <a class="portfolio-link" href="https://sounds.streamlit.app/"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Carers Strategy</h3>
+                                <h3 class="h4 mb-2">Sound Classifier</h3>
 			</div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5"
+                            <a class="portfolio-link" href="https://sway.cloud.microsoft/pFhmbkOYL2wcsKdS"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Feasibility Study</h3></div>
+                                <h3 class="h4 mb-2">User Experience Research</h3></div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6"
+                            <a class="portfolio-link" href="https://charities.streamlit.app/"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <h3 class="h4 mb-2">Data Analysis</h3>
+                                <h3 class="h4 mb-2">Charity Dashboard</h3>
 			</div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Get in touch!</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible. Initial consultation is free of charge.</p>
+                        <p class="text-muted mb-5">Want to talk further? Send us a message and we will get back to you as soon as possible. Initial consultation is free.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -213,170 +213,9 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">©getheard.io</div></div>
+            <div class="container"><div class="small text-center text-muted">Photos by Unsplash</div></div>
         </footer>
- <!-- Portfolio Modals--><!-- Modal 1-->
-        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Age-Friendly Strategy</h2>
-                                    <p class="item-intro text-muted">An Age-Friendly Strategy using guidelines from the World Health Organisation</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                    <p>A pioneering strategy to support older people in Sefton, England in line with international best practice. The strategy may be downloaded from the World Health Organization website.</p>
-                                    <ul class="list-inline">
-                                        <li>Date: 2019-2024</li>
-                                        <li>Client: Sefton Partnership for Older People</li>
-                                        <li>Category: Strategy and Planning</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal 2-->
-        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Machine Learning</h2>
-                                    <p class="item-intro text-muted">Modelling Breast Cancer Malignancy</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
-                                    <p>A machine learning model with 95% accuracy to classify likely breast cancer malignancy using a handful of cell nuclei features.</p>
-                                    <ul class="list-inline">
-                                        <li>Date:August 2022</li>
-                                        <li>Source: https://github.com/get-heard/breastcancer</li>
-                                        <li>Category: Machine Learning</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal 3-->
-        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Asset Mapping</h2>
-                                    <p class="item-intro text-muted">Mapping local charities to inform a Town Plan </p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
-                                    <p>We used Charity Commission data under the Open Government License to creat a contact directory and a geographical representation of local charities according to income levels. This will be used to consult and engage with the voluntary sector locally on the Town Masterplan.<br><br>(Thumbnail map tile by Stamen Design under CC by 3.0. Data by OpenStreetMap under CC by SA).</p>
-                                    <ul class="list-inline">
-                                        <li>Date: May 2020</li>
-                                        <li>Client: Southport Town Deal</li>
-                                        <li>Category: Asset Mapping</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal 4-->
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Carers on the Frontline</h2>
-                                    <p class="item-intro text-muted">A strategy to support unpaid carers across Cheshire & Merseyside</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
-                                    <p>We worked with the NHS, the Integrated Care Sytem and local carer support organisations to create a Carers Strategy for this area, with a population of over 1.5 million.</p>
-                                    <ul class="list-inline">
-                                        <li>Date: September 2022</li>
-                                        <li>Client: NHS North West, Cheshire & Merseyside ICS, Voluntary Sector North West</li>
-                                        <li>Category:Strategic Plan</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal 5-->
-        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Feasibility Study</h2>
-                                    <p class="item-intro text-muted">Community Project</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
-                                    <p>Market research for a new development to link existing hospice buildings and create a community cafe, therapies suite and office accommodation.</p>
-                                    <ul class="list-inline">
-                                        <li>Date: April 2022</li>
-                                        <li>Client: St Joseph's Hospice</li>
-                                        <li>Category: Feasibility Study</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal 6-->
-        <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">New York State of Mind</h2>
-                                    <p class="item-intro text-muted">New York 311 housing calls.</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
-                                    <p>A capstone project to analyse 6 million housing calls to the New York authorities and identify trends across the five boroughs. The Bronx topped the charts with the most housing complaints, with Staten Island having the fewest.</p>
-                                    <ul class="list-inline">
-                                        <li>Date: April 2022</li>
-                                        <li>Qualification: IBM Professional Certificate in Python Data Science</li>
-                                        <li>Category: Data Science</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Close Project</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
