--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
-                            <a class="portfolio-link" href="https://getheard.quarto.pub/tips/"
+                            <a class="portfolio-link" href="tips.html"
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
